--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -2,7 +2,7 @@ asgiref==3.4.1
 Django==3.2.13
 django-filter==21.1
 djangorestframework==3.13.1
-djangorestframework-simplejwt==4.4.0
+djangorestframework-simplejwt
 importlib-metadata==4.8.3
 Markdown==3.3.6
 pkg-resources==0.0.0
