--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -4,7 +4,7 @@ django-filter==21.1
 djangorestframework==3.13.1
 djangorestframework-simplejwt
 importlib-metadata==4.8.3
-Markdown==3.3.6
+Markdown
 pkg-resources==0.0.0
 PyJWT==1.7.0
 python-dotenv==0.20.0
