--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -3,7 +3,7 @@ Django==3.2.13
 django-filter==21.1
 djangorestframework==3.13.1
 djangorestframework-simplejwt
-importlib-metadata==4.8.3
+importlib-metadata
 pkg-resources
 PyJWT==1.7.0
 python-dotenv==0.20.0
