--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,13 +1,13 @@
-asgiref==3.4.1
-Django==3.2.13
-django-filter==21.1
-djangorestframework==3.13.1
+asgiref
+Django
+django-filter
+djangorestframework
 djangorestframework-simplejwt
 importlib-metadata
 pkg-resources
-PyJWT==1.7.0
-python-dotenv==0.20.0
-pytz==2022.1
-sqlparse==0.4.2
-typing-extensions==4.1.1
-zipp==3.6.0
+PyJWT
+python-dotenv
+pytz
+sqlparse
+typing-extensions
+zipp
